# nqrduck-tutorials

./: README.md  pyproject.toml
src/nqrduck_tutorials/: __init__.py  controller.py  model.py  tutorials.py  view.py
src/nqrduck_tutorials/resources/: module.ini
