[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nqrduck-tutorials"
version = "0.0.1"
authors = [
  { name="nqrduck", email="support@nqrduck.cool" },
]

description = "A module for tutorials using the NQRduck."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
]

dependencies = [
    "matplotlib",
    "pyqt6",
    "nqrduck",
]

[project.entry-points."nqrduck"]
"nqrduck-tutorials" = "nqrduck_tutorials.tutorials:Tutorials"
